@@ -47,7 +47,7 @@ class MergeMessageFileList extends Maintenance {
 			$mmfl['output'] = $this->getOption( 'output' );
 		}
 
-		global $IP, $wgExtensionMessagesFiles, $wgExtensionAliasesFiles;
+		global $IP, $wgExtensionMessagesFiles;
 		foreach ( $mmfl['setupFiles'] as $fileName ) {
 			if ( strval( $fileName ) === '' ) {
 				continue;
@@ -61,8 +61,7 @@ class MergeMessageFileList extends Maintenance {
 			"<" . "?php\n" .
 			"## This file is generated by mergeMessageFileList.php. Do not edit it directly.\n\n" .
 			"if ( defined( 'MW_NO_EXTENSION_MESSAGES' ) ) return;\n\n" .
-			'$wgExtensionMessagesFiles = ' . var_export( $wgExtensionMessagesFiles, true ) . ";\n\n" .
-			'$wgExtensionAliasesFiles = ' . var_export( $wgExtensionAliasesFiles, true ) . ";\n";
+			'$wgExtensionMessagesFiles = ' . var_export( $wgExtensionMessagesFiles, true ) . ";\n";
 
 		$dirs = array(
 			$IP,
