@@ -25,6 +25,7 @@ production.
 * (bug 32470) Increase the length of ug_group.
 * (bug 32239) Removed wgEnableTooltipsAndAccesskeys.
 * Removed $wgVectorShowVariantName.
+* Removed $wgExtensionAliasesFiles. Use wgExtensionMessagesFiles.
 
 === New features in 1.19 ===
 * (bug 19838) Possibility to get all interwiki prefixes if the interwiki
